# orquestra-backend

./: Cargo.toml  PROJECT_CONTEXT.md
.sqlx/: query-28993d68f5fbc03e16f022a1a2b1a9815da2a3f686b3d882f2f509cecc67de2e.json  query-463d671246c60a97afe9d6d487027594b0112d5a19db3dfcff01da0f10918951.json  query-4868946e0a201384ecec8dfa777fb70a16d83454ad996e5069328552243a2ca8.json  query-800c7d1cb6cf8612a0c6ee10c6e59bd7590426309bd1646ff9f220a4bf1663ba.json
examples/: basic_chat.rs
src/: config.rs  main.rs
src/context/: mod.rs  short_term.rs  vector_store.rs
src/db/: db.rs  service.rs
src/llm_provider/: anthropic.rs  functions.rs  gemini.rs  local_model.rs  mod.rs  openai.rs  traits.rs
src/models/: message.rs  mod.rs  tool_call.rs
src/orchestrator/: controller.rs  executor.rs  mod.rs  planner.rs  service.rs
src/permissions/: mod.rs  permission_manager.rs
src/persistence/: postgres.rs  redis.rs
src/services/: cache.rs  ethereum_client.rs  metadata_service.rs  mod.rs  price_service.rs  solana_client.rs
src/tools/: code_search.rs  file_edit.rs  mod.rs  web_search.rs
src/tools/wallet/: ethereum_balance.rs  mod.rs  solana_balance.rs
src/types/: mod.rs  portfolio.rs  token.rs
src/utils/: gen_id.rs  mod.rs
src/websocket/: handler.rs  mod.rs  protocol.rs  server.rs  tempCodeRunnerFile.rs
tests/: orchestrator_tests.rs  tool_tests.rs
