[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (optional - uncomment if needed)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Environment variables
dotenvy = "0.15"

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }
