[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (optional - uncomment if needed)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Environment variables
dotenvy = "0.15"

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Blockchain dependencies
solana-client = "2.0"
solana-sdk = "2.0"
solana-account-decoder = "2.0"
solana-transaction-status = "2.0"
solana-program-pack = "2.0"
spl-token = "6.0"
ethers = "2.0"
bs58 = "0.5"
rand = "0.9.2"
